--- a/notr/client/main.css
+++ b/notr/client/main.css
@@ -36,7 +36,9 @@
   .accountcontainer{
     margin-top: 100px;
   }
-  
+  .groupContainer {
+    margin-top: 100px;
+  }
   .navbar{
     background-color: rgba(109, 113, 126, 0.75);
     transition: all 0.45s;
@@ -76,7 +78,13 @@
     font-size: 30px;
     color: white;
   }
-  
+  #group{
+    margin: 100px;
+    text-align: center;
+    font: arial;
+    font-size: 30px;
+    color: white;
+  }
   #accountImage{
     width: 200px;
     height: 200px;
@@ -144,6 +152,36 @@
     z-index:10000000000000;
   }
   
+  img {
+  width: 30%;
+  float: left;
+  margin:1.66%;
+}
+.left {
+  float: left;
+  font-size:23px;
+  width: 33.3%;
+  padding-bottom: 20px;
+  text-align: center;
+}
+.middle {
+  float: left;
+  font-size:23px;
+  width: 33.3%;
+  padding-bottom: 20px;
+  text-align: center;
+
+}
+
+.right {
+  float: left;
+  font-size:23px;
+  width: 33.3%;
+  padding-bottom: 20px;
+  text-align: center;
+
+}
+
   .menu{z-index:1000000; font-weight:bold; font-size:0.8em; width:15%; background: rgba(109, 113, 126, 0.75); position:absolute; text-align:center; font-size:16px; right:0 ; margin-top: 50px}
   .menu ul {margin: 100; padding: 0; list-style-type: none; list-style-image: none;}
   .menu li {display: block;   padding:15px 0 15px 0; border-bottom:#dddddd 1px solid;color: rgb(0, 0, 0)}
