--- a/Notr/Notr/client/main.css
+++ b/Notr/Notr/client/main.css
@@ -195,7 +195,9 @@
   width: 33.3%;
   text-align: center;
 }
-
+.calendar {
+  margin-top: 50px;
+}
   .menu{z-index:1000000; font-weight:bold; font-size:0.8em; width:15%; background: rgba(109, 113, 126, 0.75); position:absolute; text-align:center; font-size:16px; right:0 ; margin-top: 50px}
   .menu ul {margin: 100; padding: 0; list-style-type: none; list-style-image: none;}
   .menu li {display: block;   padding:15px 0 15px 0; border-bottom:#dddddd 1px solid;color: rgb(0, 0, 0)}
