--- a/Notr/Notr/client/main.css
+++ b/Notr/Notr/client/main.css
@@ -121,7 +121,8 @@
     height: 200px;
     margin-left: auto;
     margin-right: auto;
-    background: url(/images/hankhill.png);
+    background: url(/images/account.png);
+    background-position: center;
     border-style: solid;
     border-radius: 100px;
   }
